fix logos on firefox

--- a/less/variables.less
+++ b/less/variables.less
@@ -29,12 +29,12 @@
 @text-color: #000; // color of text on canvas
 
 @logo-path: url('../img/icon-vox-black.svg');
-@logo-sq-width: 120px;
-@logo-sq-height: 58px;
+@logo-sq-width: 100px;
+@logo-sq-height: 48.33333px;
 @logo-16x9-width: 100px;
-@logo-16x9-height: 80px;
+@logo-16x9-height: 48.33333px;
 @logo-fb-ratio-width: 100px;
-@logo-fb-ratio-height: 80px;
+@logo-fb-ratio-height: 48.33333px;
 
 @column-bg: #F5F5F5;
 @button-color: #EFEFEF;
